--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -91,6 +91,6 @@ markdown_extensions:
 #   &copy; 2023 <a href="https://github.com/FabricioDeQueiroz"  target="_blank" rel="noopener">Fabrício</a>
 
 # Page tree:
-# nav:
-#  - Home: 'index.md'
-#  - Pagina: 'page-two.md'
+nav:
+  - Home: index.md
+  - Pagina: page-two.md
